LPD-X Add -Djava.security.manager=allow for the Talend process